This file summarizes changes in WinMerge releases.
Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX). To open the tracker item, go to URL:
http://winmerge.org/tracker/[tracker-id]

WinMerge 2.13.3
  Use three-digit version numbers in GUI (#2585662)
  Bugfix: Could not copy files from right to left (#2556904)
  Bugfix: Don't show file name extension for folders (#2563314)
  Bugfix: Help window opened from WinMerge was modal (#2590079)
  Bugfix: Crash in editor when undoing (#2590212)
  Translation updates:
  - Croatian (#2596949)
  - Dutch (#2590430)
  - French (#2551043, #2551066)
  - German (#2586497)
  - Greek (#2550911)
  - Swedish (#2557881)

WinMerge 2.13.2 - 2009-01-28 (r6395)
  Register.bat should use Find with full path (#2536582)
  Bugfix: Creating new files caused message about missing files (#2515875)
  Bugfix: Could not hide folders in recursive compare (#2528749)
  Bugfix: Folder Compare:Copy Right/Left don't create folder
    structure (#2529517)
  Bugfix: Must Show Different to Show L/R Unique (#2129561)
  Translation updates:
  - Brazilian (#2524796)
  - Chinese Traditional (#2540115)
  - Dutch (#2531307)
  - Swedish (#2511043)

WinMerge 2.13.1 - 2009-01-15 (r6334)
  Update Python syntax highlight keywords for Python 2.6 (#2473375)
  More accurate visible area indicator in location pane (#2479804)
  Better Unicode file detection for full contents compare (#2477657)
  New options page for Shell Integration options (#2433648)
  Bugfix: Could not open project file that contains an ampersand 
    character in folder names (#2372000)
  Bugfix: File compare method "Modified Date and Size" ignored file size
    (#2455595)
  BugFix: Quick compare didn't ignore EOL differences (#2433677)
  Bugfix: Location pane was empty for some files with diffs (#2459234)
  Bugfix: Remove EOL characters from command line (#2458728)